--- a/MainApp/templates/tecnologias.html
+++ b/MainApp/templates/tecnologias.html
@@ -23,6 +23,13 @@
             <div class=''>
                 <img class='' width=100 src={% static 'media/icon-css.png' %}>
             </div>
+            <div class=''>
+                <img class='' width=100 src={% static 'media/icon-php.png' %}>
+            </div>
+            <div class=''>
+                <img class='' width=100 src={% static 'media/icon-laravel.png' %}>
+            </div>
+            </div>
             </div>
         </div> 
     </section>
